--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 		<div class="content">
 			<div class="banner">
 				<div class="container banner__body">
-					<div class="banner__title">
+					<h3 class="banner__title">
 						We Deliver<br>
 						With Speed
-					</div>
+					</h3>
 					<div class="banner__text">
 						When an unknown printer took a galley of type and scrambled <br>
 						it to make a type specimen book. It has survived not only five centuries
@@ -78,6 +78,71 @@
 					<div class="banner__buttons">
 						<a href="#" class="banner__button_yellow yellow-button">Learn More</a>
 						<a href="#" class="banner__button_white white-button">dhl worldwide</a>
+					</div>
+				</div>
+			</div>
+			<div class="services">
+				<div class="container services__body">
+					<h3 class="services__title">
+						Awesome Services
+					</h3><br>
+					<div class="services__pages">
+						<div class="services__page serv-page">
+							<div class="serv-page__image">
+								<img loading="lazy" src="img/serv1.webp" alt="img1">
+							</div>
+							<div class="serv-page__title">Express Services</div>
+							<div class="serv-page__text">When an unknown printer took a galley of type and scrambled it to make
+								a type specimen.</div>
+							<a href="#" class="serv-page__button">
+								Read More <i class="fas fa-caret-right"></i>
+							</a>
+						</div>
+						<div class="services__page serv-page">
+							<div class="serv-page__image">
+								<img loading="lazy" src="img/serv2.webp" alt="img2">
+							</div>
+							<div class="serv-page__title">parcel & ecommerce</div>
+							<div class="serv-page__text">When an unknown printer took a galley of type and scrambled it to make
+								a type specimen.</div>
+							<a href="#" class="serv-page__button">
+								Read More <i class="fas fa-caret-right"></i>
+							</a>
+						</div>
+						<div class="services__page serv-page">
+							<div class="serv-page__image">
+								<img loading="lazy" src="img/serv3.webp" alt="img3">
+							</div>
+							<div class="serv-page__title">frieght transport</div>
+							<div class="serv-page__text">When an unknown printer took a galley of type and scrambled it to make
+								a type specimen.</div>
+							<a href="#" class="serv-page__button">
+								Read More <i class="fas fa-caret-right"></i>
+							</a>
+						</div>
+						<div class="services__explore explore">
+							<h4 class="explore__title">DHl Worldwide</h4>
+							<div class="explore__text">When an unknown prot printer type and scra</div>
+							<div class="explore__location">
+								<div class="explore__location-text">Location</div>
+								<div class="explore__location-button"><i class="fas fa-caret-down"></i></div>
+								<div class="explore__poppup">
+									<li>test</li>
+									<li>Location</li>
+									<li>Location</li>
+									<li>Location</li>
+									<li>Location</li>
+									<li>Location</li>
+									<li>Location</li>
+									<li>Location</li>
+									<li>Location</li>
+									<li>Location</li>
+								</div>
+							</div>
+							<a href="#" class="explore__button yellow-button">
+								Explore
+							</a>
+						</div>
 					</div>
 				</div>
 			</div>
